IGNITE-19407 Removed composite action.